--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tw-elements": "^1.0.0-beta3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
